--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: install-npm-wee
-          command: npm install       
+          name: install-npm
+          command: npm install     
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
