--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ workflows:
 # Define the jobs we want to run for this project
 jobs:
   build:
-    working_directory: ~/Users/nicholasogrady/Desktop/devops-ca-nick/SimpleApplication 
-    
+    working_directory: ~/SimpleApplication
     docker:
       - image: circleci/node:latest
     steps:
@@ -35,8 +34,8 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: install-npm
-          command: npm install     
+          name: install-npm-wee
+          command: npm install       
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
@@ -47,6 +46,6 @@ jobs:
     steps:
       - run: 
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf SimpleApplication/; git clone https://github.com/NOGNCI/SimpleApplication.git; source SimpleApplication/deploy.sh"
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf SimpleApplication/; git clone https://github.com/NOGNCI/SimpleApplication.git; source SimpleAppplication/deploy.sh"
 # deployment successful
     
